public/styles/_core/playerview.scss
/* ... */
// BOTTOM BAR (COINS, NEXT)
footer#bottom-bar {
	font-size: large;
	width: 100%;
	bottom: 8px;
	left: 0px;
	height:90px;
	position: absolute;
	padding-top: 5px;
	max-width: 425px;
	z-index: 1000;

	.col-sm-6, .col-xs-6 {
		padding-left:8px;
		padding-right:8px;
		height: 100%;
	}	

	#currency {
		text-align:right;
		height:100%;
		min-height: 100px;
		font-family: AvenirNext-Bold;
		color: white;
		
		div {
			display: inline-block;
			text-align: center;
		}
		p {
			font-size: 8px;
			margin: 0px;
			text-align: center;
			color: white;
			padding-bottom: 45px;
			padding-top: 10px;
		}
		img {
			height: 60px;
			width: 60px;
		}

		span {
			font-size: 12px;
	  }
		#player-coins {
			background-image: url('https://res.cloudinary.com/engagement-lab-home/image/upload/f_auto,w_60/v1486743650/at-stake/layout/coin-icon-mobile.svg');
			height: 100px;
			width: 60px;
	    background-repeat: no-repeat;
	    background-size: 50px 50px;
	    background-position: center;
		}
		#pot-coins {
			background-image: url('https://res.cloudinary.com/engagement-lab-home/image/upload/f_auto,w_60/v1486743650/at-stake/layout/coin-pot-mobile.svg');
			height: 100px;
			width: 60px;
	    background-repeat: no-repeat;
	    background-size: 50px 50px;
	    background-position: center;
		}

	}

	button {
		margin: 5px;
		color: white;
		width: 121px;
	  height: 36px;
	  padding-left: 2.4em;
	  font-size: 16px;
	  border-radius: 0px;
	  text-align: left;
  	background-repeat: no-repeat;
	  box-shadow: 0px;
	  border: 0px;
	  box-shadow: 0 0.5px 0 0 rgba(0, 0, 0, 0.25);
	  background-size:24px 24px;
	  background-position: 8px center;

	  &#btn-role-card {
	  	background-image: url('https://res.cloudinary.com/engagement-lab-home/image/upload/v1492806723/at-stake/layout/icon-rolecard.svg');
	  	background-color: $orange-dark;
	  	border-bottom: 3px darken($orange-dark, 10%) solid;
	  }
	  &#btn-menu {
	  	background-image: url('https://res.cloudinary.com/engagement-lab-home/image/upload/v1492806723/at-stake/layout/menu-icon.svg');
	  	background-color: $orange-light;
	  	border-bottom: 3px $orange-dark solid;
	  }
	}
}

